--- a/index.html
+++ b/index.html
@@ -1,214 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>Spartapedia</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Hahmlet:wght@300&display=swap");
-      * {
-        font-family: "Hahmlet", serif;
-      }
-      .mytitle {
-        width: 100%;
-        height: 250px;
+  <title>Spartapedia</title>
 
-        background-image: linear-gradient(
-            0deg,
-            rgba(0, 0, 0, 0.5),
-            rgba(0, 0, 0, 0.5)
-          ),
-          url("https://cdn.pixabay.com/photo/2020/05/04/11/04/pokeball-5128709_960_720.jpg");
-        background-position: center;
-        background-size: cover;
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Hahmlet:wght@300&display=swap");
 
-        color: white;
+    * {
+      font-family: "Hahmlet", serif;
+    }
 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
+    .mytitle {
+      width: 100%;
+      height: 250px;
 
-      .mytitle > button {
-        width: 200px;
-        height: 50px;
+      background-image: linear-gradient(0deg,
+          rgba(0, 0, 0, 0.5),
+          rgba(0, 0, 0, 0.5)),
+        url("https://cdn.pixabay.com/photo/2020/05/04/11/04/pokeball-5128709_960_720.jpg");
+      background-position: center;
+      background-size: cover;
 
-        background-color: transparent;
-        color: white;
+      color: white;
 
-        border-radius: 50px;
-        border: 1px solid white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
 
-        margin-top: 10px;
-      }
+    .mytitle>button {
+      width: 200px;
+      height: 50px;
 
-      .mytitle > button:hover {
-        border: 2px solid white;
-      }
+      background-color: transparent;
+      color: white;
 
-      .mycards {
-        margin: 20px auto 0px auto;
-        width: 95%;
-        max-width: 1200px;
-      }
-      .mypost {
-        width: 95%;
-        max-width: 500px;
-        margin: 20px auto 10px auto;
-        padding: 20px;
-        box-shadow: 0px 0px 3px 0px gray;
-      }
-      .form-buttons {
-        display: flex;
-        justify-content: center;
-        margin-top: 30px;
-      }
-    </style>
-  </head>
+      border-radius: 50px;
+      border: 1px solid white;
 
-  <body>
-    <div class="mytitle">
-      <h1>My favorite pokemons</h1>
-      <button>Save a new pokemon</button>
-    </div>
-    <div class="mypost">
-      <form>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">pokemon URL</label>
-          <input
-            type="email"
-            class="form-control"
-            id="exampleInputEmail1"
-            aria-describedby="emailHelp"
-            placeholder="Enter Url"
-          />
-          <div id="emailHelp" class="form-text"></div>
-        </div>
-        <div class="input-group mb-3">
-          <label class="input-group-text" for="inputGroupSelect01">Stars</label>
-          <select class="form-select" id="inputGroupSelect01">
-            <option selected>--Select a lating--</option>
-            <option value="1">⭐</option>
-            <option value="2">⭐⭐</option>
-            <option value="3">⭐⭐⭐</option>
-            <option value="4">⭐⭐⭐⭐</option>
-            <option value="5">⭐⭐⭐⭐⭐</option>
-          </select>
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">comment</label>
-          <input
-            type="password"
-            class="form-control"
-            id="exampleInputPassword1"
-            placeholder="comment"
-          />
-        </div>
+      margin-top: 10px;
+    }
 
-        <div class="form-buttons">
-          <button type="submit" class="btn btn-primary">Save</button>
-          <button type="submit" class="btn btn-secondary">Cansel</button>
-        </div>
-      </form>
-    </div>
-    <div class="mycards">
-      <div class="row row-cols-1 row-cols-md-4 g-4">
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="https://zukan.pokemon.co.jp/zukan-api/up/images/index/4f8f7ac059b4b366f8d6e2875597e277.png"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">KABIGON</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p>⭐⭐⭐⭐</p>
-              <p style="color: red">my comment</p>
-            </div>
+    .mytitle>button:hover {
+      border: 2px solid white;
+    }
+
+    .mycards {
+      margin: 20px auto 0px auto;
+      width: 95%;
+      max-width: 1200px;
+    }
+
+    .mypost {
+      width: 95%;
+      max-width: 500px;
+      margin: 20px auto 10px auto;
+      padding: 20px;
+      box-shadow: 0px 0px 3px 0px gray;
+    }
+
+    .form-buttons {
+      display: flex;
+      justify-content: center;
+      margin-top: 30px;
+    }
+  </style>
+  <script> //javascriptはscriptタグで囲む
+    $(document).ready(function () { //jquery
+      fetch("http://spartacodingclub.shop/sparta_api/weather/tokyo")
+        .then((responce) => responce.json())
+        .then((data) => {
+          // console.log(data)
+          let number = data["temp"]; //numberはdataの中のtempである
+          $("#temp").text(number); //id属性　$("#id値")でどのhtmlタグを変更するのか指定　id：tempを指定 .textで要素のテキストを設定
+        });
+    });
+  </script>
+</head>
+
+<body>
+  <div class="mytitle">
+    <h1>My favorite pokemons</h1>
+    <div>今の気温 : <span id="temp">20</span>度</div>
+    <button>Save a new pokemon</button>
+  </div>
+  <div class="mypost">
+    <form>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">pokemon URL</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+          placeholder="Enter Url" />
+        <div id="emailHelp" class="form-text"></div>
+      </div>
+      <div class="input-group mb-3">
+        <label class="input-group-text" for="inputGroupSelect01">Stars</label>
+        <select class="form-select" id="inputGroupSelect01">
+          <option selected>--Select a lating--</option>
+          <option value="1">⭐</option>
+          <option value="2">⭐⭐</option>
+          <option value="3">⭐⭐⭐</option>
+          <option value="4">⭐⭐⭐⭐</option>
+          <option value="5">⭐⭐⭐⭐⭐</option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">comment</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="comment" />
+      </div>
+
+      <div class="form-buttons">
+        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-secondary">Cansel</button>
+      </div>
+    </form>
+  </div>
+  <div class="mycards">
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="https://zukan.pokemon.co.jp/zukan-api/up/images/index/4f8f7ac059b4b366f8d6e2875597e277.png"
+            class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">KABIGON</h5>
+            <p class="card-text">
+              This is a longer card with supporting text below as a natural
+              lead-in to additional content. This content is a little bit
+              longer.
+            </p>
+            <p>⭐⭐⭐⭐</p>
+            <p style="color: red">my comment</p>
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="https://pbs.twimg.com/profile_images/965740845382090752/Hqh59ODK_400x400.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">PIKACHU</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p>⭐⭐⭐</p>
-              <p style="color: red">my comment</p>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="https://pbs.twimg.com/profile_images/965740845382090752/Hqh59ODK_400x400.jpg" class="card-img-top"
+            alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">PIKACHU</h5>
+            <p class="card-text">
+              This is a longer card with supporting text below as a natural
+              lead-in to additional content. This content is a little bit
+              longer.
+            </p>
+            <p>⭐⭐⭐</p>
+            <p style="color: red">my comment</p>
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="https://zukan.pokemon.co.jp/zukan-api/up/images/index/0fe2142e70d6e3006f3acffeb4d9ebd8.png"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">PERUSIAN</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p>⭐⭐</p>
-              <p style="color: red">my comment</p>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="https://zukan.pokemon.co.jp/zukan-api/up/images/index/0fe2142e70d6e3006f3acffeb4d9ebd8.png"
+            class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">PERUSIAN</h5>
+            <p class="card-text">
+              This is a longer card with supporting text below as a natural
+              lead-in to additional content. This content is a little bit
+              longer.
+            </p>
+            <p>⭐⭐</p>
+            <p style="color: red">my comment</p>
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="https://zukan.pokemon.co.jp/zukan-api/up/images/index/89953014f442146518ef45787d9bb0a4.png"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">HITOKAGE</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p>⭐⭐⭐⭐⭐</p>
-              <p style="color: red">my comment</p>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="https://zukan.pokemon.co.jp/zukan-api/up/images/index/89953014f442146518ef45787d9bb0a4.png"
+            class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">HITOKAGE</h5>
+            <p class="card-text">
+              This is a longer card with supporting text below as a natural
+              lead-in to additional content. This content is a little bit
+              longer.
+            </p>
+            <p>⭐⭐⭐⭐⭐</p>
+            <p style="color: red">my comment</p>
           </div>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
